--- a/NevDec2Master/NevDec2Master.vcxproj
+++ b/NevDec2Master/NevDec2Master.vcxproj
@@ -153,6 +153,7 @@
   <ItemGroup>
     <ClInclude Include="card.h" />
     <ClInclude Include="deck.h" />
+    <ClInclude Include="d_node.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
